# CRESTA

./: CMakeLists.txt  README.md  setupcresta.sh
app/chance/: chance_asr.cc  chance_discr.cc  chance_g4sim.cc  chance_trackfit.cc
app/pumas/: pumas_example.cc
app/standard/: cosmicraysim.cc
cmake/: cresta_buildlib.in  setup.sh.in
data/: global.db  init_vis.mac
data/chance/: defaultdetectorsystem.geo  discriminator_config.geo  trackfit_config.geo
data/fluxes/: cos2.db  cry.db  genericflux.db
data/hybrid/: muontomographydetector.geo
data/materials/: geant4_materials.db  material_list.db
examples/chance/detmod/: myhybriddetector.geo  mynewdetector.geo
examples/chance/leadblock/: leadblock_table.geo  plot.py
examples/chance/steeldrum/: steeldrum_tables.geo
examples/chance/truthmap/: chanceoutput.0.mcmap.root  steeldrum_tables.geo
examples/crestaexpansion/: CMakeLists.txt  README.md  protonmodule.geo  run.sh  setup.sh
examples/crestaexpansion/app/: expansion_g4sim.cc
examples/crestaexpansion/cmake/: setup.sh.in
examples/crestaexpansion/src/: ProtonBeamGenerator.cc  TrueProtonTracker.cc  TrueProtonTracker.hh
examples/crestamodule/: ModuleManifest.cc  ProtonBeamGenerator.hh  build.sh  run.sh  setup.sh
examples/scintillation/: README.md  run.sh  scintillation.geo
examples/shefjobsub/: make_temp_scratch.sh  runscript.sh  simulationsetup.sh  submitall.sh
examples/simpletracker/: README.md  analysis.py  simpletracker.geo
examples/truetracker/: README.md  run.sh  truetracker.geo
macros/chance/chancegeo/: CHANCEdot.stl  CHANCEletters.stl  CHANCEoutline.stl  CHANCEsquare.stl  CHANCEtotal.stl  cosmicdetector.geo~
macros/pumas/: cosmicdetector.geo  cosmicdetector.geo~  opensky_pumas.geo  opensky_shukla.geo
src/action/: ActionFactory.cc  ActionFactory.hh  CRESTAActionInitialization.cc  CRESTAActionInitialization.hh  CRESTARun.cc  CRESTARun.hh  CRESTARunAction.cc  CRESTARunAction.hh  CRESTAStackingAction.cc  CRESTAStackingAction.hh  CRESTASteppingAction.cc  CRESTASteppingAction.hh  CosmicActionInitialization.cc  CosmicActionInitialization.hh  CosmicRun.cc  CosmicRun.hh  CosmicRunAction.cc  CosmicRunAction.hh  CosmicStackingAction.cc  CosmicStackingAction.hh  CosmicSteppingAction.cc  CosmicSteppingAction.hh  OpticalActionInitialization.cc  OpticalActionInitialization.hh  OpticalSteppingAction.cc  OpticalSteppingAction.hh
src/analysis/: Analysis.cc  Analysis.hh  VDetector.hh  VFluxProcessor.hh  VProcessor.hh  VTrigger.hh
src/chance/: AWEDriftChamber.cc  AWEScintillatorPaddle.cc  AWEScintillatorPaddle.hh  AWEScintillatorSD.cc  AWEScintillatorSD.hh  BackProjectionGrid.cc  BackProjectionGrid.hh  BristolPoCAFitter.cc  BristolPoCAFitter.hh  ChannelMapping.hh  EventVertex.hh  HybridMuonTomographyDetector.cc  TrueMCReader.cc  TrueMCReader.hh  VertexGrid.cc  VertexGrid.hh
src/cry/: Makefile.copyright
src/db/: DB.cc  DB.hh  DBEvaluator.cc  DBEvaluator.hh  DBTable.cc  DBTable.hh  DynamicObjectLoader.cc  DynamicObjectLoader.hh  ROOTHeaders.hh  ReadFile.cc  ReadFile.hh
src/flux/: CRYPrimaryGenerator.cc  CRYPrimaryGenerator.hh  FluxFactory.cc  FluxFactory.hh  IsotropicSphereSource.cc  IsotropicSphereSource.hh  LOSPrimaryGenerator.cc  LOSPrimaryGenerator.hh  PrimaryGeneratorCos2.cc  PrimaryGeneratorCos2.hh  PrimaryGeneratorFactory.cc  PrimaryGeneratorGeneric.cc  PrimaryGeneratorGeneric.hh  PrimaryGeneratorROOT.cc  PrimaryGeneratorROOT.hh  PumasBackwardsGenerator.cc  PumasBackwardsGenerator.hh  ShuklaPrimaryGenerator.cc  ShuklaPrimaryGenerator.hh
src/geo/: GeoFactory.cc  GeoFactory.hh  GeoManager.cc  GeoManager.hh  GeoObject.hh  GeoSolid.cc  GeoSolid.hh  GeoUtils.cc  GeoUtils.hh
src/geo/cadmesh/: GeoCADMesh.cc  GeoCADMesh.hh
src/geo/imps/: IMPSBlockArray.cc  IMPSBlockArray.hh  IMPSBlockArray.hh~  IMPSNeutronBlock.cc  IMPSNeutronBlock.hh
src/geo/nuclearwaste/: LargeSteelDrum.cc  SmallSteelDrum.cc
src/geo/simple/: GeoBox.cc  GeoBox.hh  GeoCone.cc  GeoCone.hh  GeoCutTubs.cc  GeoCutTubs.hh  GeoEllipticalTube.cc  GeoEllipticalTube.hh  GeoEllipticalTunnel.cc  GeoEllipticalTunnel.hh  GeoPara.cc  GeoPara.hh  GeoTubs.cc  GeoTubs.hh
src/materials/: MaterialFactory.hh  MaterialManager.cc  MaterialManager.hh  MaterialsFactory.cc  MaterialsFactory.hh
src/physics/: DefaultPhysics.cc  PhysicsFactory.cc  PhysicsFactory.hh  ScintillatorPhysics.cc  ScintillatorPhysics.hh  ScintillatorPhysicsList.cc  ScintillatorPhysicsList.hh
src/processors/: ProcessorFactory.cc  ProcessorFactory.hh  TrueMuonPoCAProcessor.cc  TrueMuonPoCAProcessor.hh
src/pumas/: PUMASInterface.hh
src/sd/: DetectorConstruction.cc  DetectorConstruction.hh  DetectorFactory.cc  DetectorFactory.hh  DetectorManager.cc  DetectorMessenger.cc  DetectorMessenger.hh  DriftHit.cc  GridScintillatorSD.cc  GridScintillatorSD.hh  LineOfSightSD.cc  LineOfSightSD.hh  LongDriftSD.cc  LongDriftSD.hh  NeutronSD.cc  NeutronSD.hh  PhotonHit.cc  PhotonHit.hh  PhotonSD.cc  PhotonSD.hh  ScintillatorHit.cc  ScintillatorHit.hh  SimpleScintillatorSD.cc  SimpleScintillatorSD.hh  TargetMuonInOutTracker.cc  TargetMuonInOutTracker.hh  TrueInTracker.cc  TrueInTracker.hh  TrueMuonTracker.cc  TrueMuonTracker.hh
src/trigger/: CoincidenceTrigger.cc  CoincidenceTrigger.hh  SimpleTrigger.cc  SimpleTrigger.hh  TriggerFactory.cc  TriggerFactory.hh
src/utils/: PoCAUtils.cc  PoCAUtils.hh
